2008-03-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Field sys_template.include_static_file limited to 20 items

2008-03-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7923: htmlArea RTE cannot delete block via delete/backspace keys in IE 6 and IE7

2008-03-21  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #4250: ASCII transliteration did not expand Iclandic letters thorn and eth.
	* Fixed bug #7903: Use PHP5 features in class.t3lib_extmgm.php (final and static, thanks to Kasper Ligaard)
	* Fixed bug #7906: Use PHP5 features in class.t3lib_befunc.php (final and static, thanks to Kasper Ligaard))
	* Fixed bug #7909: Use PHP5 features in class.t3lib_iconworks.php (final and static, thanks to Kasper Ligaard))
	* Added feature #5726: Javascript mailform validation doesn't check fields of type 'file' (thanks to Loek Hilgersom and Peter Foerger)
	* Enhanced feature #6888: Disabling some or all controls in "group" field - controllable via pageTS

2008-03-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7818: Login page: Hardcoded logo & labels instead of p tags (Thanks to Georg Ringer and Christian Kuhn)

2008-03-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7918: HTMLArea RTE: table width unit default not honoured when width is not set

2008-03-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6907: "Conflicts" check ignores version

2008-03-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7892: Unify User setup layout (Thanks to Steffen Kamper)

2008-03-18  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7307: Move 'Open Documents' to Header in the BE

2008-03-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7886: JS error raised in htmlArea RTE in IE5.5 when setting inline markup or text style
	* Fixed bug #7880: Insert table and borders in htmlArea RTE
	* Fixed bug #7890: htmlArea RTE: premature undo snapshot may cause JavaScript error to be raised

2008-03-17  Oliver Hader  <oliver@typo3.org>
