@@ -1,3 +1,7 @@
+2008-03-24  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7934: HTMLArea RTE block style and text style may present disallowed classes
+
 2008-03-22  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #7923: htmlArea RTE cannot delete block via delete/backspace keys in IE6 and IE7
