@@ -1,3 +1,7 @@
+2008-03-24  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7934: HTMLArea RTE block style and text style may present disallowed classes
+
 2008-03-24  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug: Field sys_template.include_static_file limited to 20 items
